--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "multer": "^2.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "bcrypt": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
