--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
