--- a/netlify.toml
+++ b/netlify.toml
@@ -9,12 +9,12 @@
 
 # Directorio de las funciones (relativo a la raíz del proyecto).
 [functions]
-  directory = "netlify/functions"
+  directory = "frontend/netlify/functions"
 
 # Reglas de redirección para SPA y proxy de funciones
 [[redirects]]
   from = "/api/*"
-  to = "https://chorrillos-seguro.onrender.com/:splat"
+  to = "/.netlify/functions/:splat"
   status = 200
 
 [[redirects]]
